2009-02-27  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* stats/management/commands/update-stats.py: Fix help message.

2009-02-14  Claude Paroz  <claude@2xlibre.net>

	* docs/notes-upgrade.txt: enlarge information.type varchar to 10 chars.
	* stats/models.py: Add 2 more information type (warn-ext, error-ext) to
	be able to select informations with external warnings/errors. These are
	always checked when recomputing stats.
	* stats/utils.py: LINGUAS warnings are of type 'warn-ext'.
	Fixes bug #567680.

2009-02-14  Claude Paroz  <claude@2xlibre.net>

	* templates/teams/team_detail.html: Also fix RTL display.
	Really fixes #571349.

2009-02-12  Claude Paroz  <claude@2xlibre.net>

	* templates/languages/language_release_stats.html: Fix graph direction
	for RTL languages.
	Fixes bug #571349.

2009-02-11  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-stats.py: Implement a basic lock
	mecanism to prevent multiple stats running on same module/branch.
	Fixes bug #562947.

2009-02-10  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-stats.py: Added an option to update
	all non-GNOME modules.

2009-02-06  Claude Paroz  <claude@2xlibre.net>

	* vertimus/views.py: Argh... removed pdb.set_trace() :-D

2009-02-06  Claude Paroz  <claude@2xlibre.net>

	* vertimus/views.py: Reordered if... else section. Get merged file for
	action2 also.

2009-02-04  Claude Paroz  <claude@2xlibre.net>

	* stats/potdiff.py: potdiff returns two result sets in all cases, so as it
	has not to be called twice.
	* stats/utils.py: Added a pot diff function.
	* stats/models.py: Uses utils.pot_diff_status and act upon the result
	code.
	The pot_has_changed signal is now sent even for formatting changes, so as
	the diff view get rid of code line numbers stuff.

2009-02-03  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	Patch made with Claude to fix #570247.
	
	* media/css/layout.css: New 'inline' class to avoid style tag in
 	HTML code.