@@ -80,7 +80,7 @@
           {% endif %}
           <div class="right_actions">{% trans "diff with:" %}
             {% for f in files %}
-                <a href="{% url vertimus-diff-view action.id,f.action %}" title="{{ f.title }}">[{{ forloop.revcounter }}]</a>
+                <a href="{% url vertimus-diff-view action.id,f.action_id %}" title="{{ f.title }}">[{{ forloop.revcounter }}]</a>
             {% endfor %}
           </div>
         {% endif %}
